Prevent "jumpiness" when laying out cards.

--- a/app/account/styles/_card.styl
+++ b/app/account/styles/_card.styl
@@ -9,6 +9,7 @@ $cardGutter = 15px;
   cursor: pointer;
   float: left;
   height: $cardHeight;
+  margin: 0 $cardGutter $cardGutter 0;
   position: relative;
   overflow: hidden;
   width: $cardWidth;
